--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,14 @@
 [preprocessing]
 data_dir=labels-pals_images
 nb_clusters=10
-ratio_first_sample=0.1  #%
-ratio_sample_test=0.2  #%
+ratio_first_sample=0.1  
+ratio_sample_test=0.2  
 
 [training]
-epochs=1
+epochs=5
+
+[bestimages]
+nb_images_pour_tester=100
+worst_images=50
+nb_clusters_les_plus_frequents=3
+nb_images_a_annoter=100
